js/js.translator/testData/incremental/invalidation/multiPlatformClashFileNamesWithCrossModuleInliner/lib1/common/l1.2.kt
inline fun commonFun() = 2
